# MUD

./: .gitignore  CMakeLists.txt  CMakePresets.json  CURRENT_TODO.md  mud_session.swapfile  run_all_iterative.sh  run_all_tests  test_example
cmake/: Coverage.cmake  Deps.cmake  Sanitizers.cmake
config/: motd.txt  mud.conf  zlog.conf
data/db_dest/: test_fixture.sql
docs/: ARCHITECTURE.md  CHAT_SAVE_2026-03-31.md  DEV.md  MUD_TODO-2.md  SESSION_HANDOFF_2026-03-19.md
include/: mud_arena.h  mud_arena_string.h  mud_arena_temp.h  mud_buffer.h  mud_buffer.h.gch  mud_config.h  mud_connection.h  mud_crypto.h  mud_db.h  mud_direction.h  mud_hashmap.h  mud_hashmap.h.gch  mud_input.h  mud_json.h  mud_listener.h  mud_log.h  mud_log_sink.h  mud_log_thread.h  mud_log_types.h  mud_net.h  mud_net_loop.h  mud_net_security.h  mud_output.h  mud_session.h  mud_socket.h  mud_str.h  mud_str.h.gch  mud_strdup.h.gch  mud_telnet.h  mud_testctx.h  mud_testctx.h.gch  mud_utils.h  mud_vector.h  mud_vector.h.gch
include/test/: test_autoreg.h  test_core.h  test_log.h
src/: CMakeLists.txt  main.c  mud_arena.c  mud_arena_string.c  mud_buffer.c  mud_db.c  mud_hashmap.c  mud_log.c  mud_log_internal.h  mud_log_sink.c  mud_log_thread.c  mud_str.c  mud_utils.c  mud_vector.c
src/arena/: mud_arena.c  mud_arena_str.c  mud_arena_temp.c
src/config/: mud.conf  mud_config.c  zlog.conf
src/gameplay/: mud_direction.c
src/log/: mud_log.c
src/net/: mud_connection.c  mud_input.c  mud_listener.c  mud_net.c  mud_net_loop.c  mud_output.c  mud_session.c  mud_socket.c  mud_telnet.c
src/utils/: mud_buffer.c  mud_crypto.c  mud_db.c  mud_hashmap.c  mud_json.c  mud_str.c  mud_utils.c  mud_vector.c
test/: CMakeLists.txt  generate_test_db.c  run_all_tests.c  test_example.c  test_registry.c
test/cmake/: VerifyBuildMode.cmake
test/modules/: test_arena.c  test_config.c  test_connection.c  test_crypto.c  test_db.c  test_hashmap.c  test_input.c  test_json.c  test_net_loop.c  test_output.c  test_str.c  test_utils.c  test_vector.c
test/slow/: test_integration.c
tests/: CMakeLists.txt  run_all_tests.c  run_single_module.c
tests/modules/: test_arena.c  test_buffer.c  test_hashmap.c  test_str.c  test_utils.c  test_vector.c
